# monte-carlo-library

./: .gitignore  CMakeLists.txt  README.md
include/monte_carlo/: distributions.hpp  monte_carlo.hpp  random.hpp  simulation_result.hpp  statistics.hpp
src/: random.cpp
tests/: CMakeLists.txt  tests.cpp
